--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/android-timetable-core"]
-	path = libs/android-timetable-core
+[submodule "android-timetable-core"]
+	path = android-timetable-core
 	url = git@github.com:GreaseMonk/android-timetable-core.git
