--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,37 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+// To avoid manually setting the same values in all Android modules, set the value on the root
+// project and then reference this from the modules
+ext {
+    compileSdkVersion = 25
+    buildToolsVersion = "25.0.0"
+    supportLibVersion = "25.0.0"
+}
+
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.14.1'
 }
