--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,10 @@ dependencies {
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}" 
     compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}" 
     compile "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
-    
     // Used to display items in a recyclerview
     // https://github.com/mikepenz/FastAdapter
-    compile('com.mikepenz:fastadapter:2.0.0@aar') { transitive = true }
+    //compile('com.mikepenz:fastadapter:2.0.0@aar') { transitive = true }
     // Used to display images
     // https://github.com/bumptech/glide
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //compile 'com.github.bumptech.glide:glide:3.7.0'
 }
