--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,35 @@
+/*
+ * Copyright (c) 2018 .
+ * This file is released under the Apache-2.0 license and part of the TimeTable repository located at:
+ * https://github.com/greasemonk/android-timetable-core
+ * See the "LICENSE" file at the root of the repository or go to the address below for the full license details.
+ * https://github.com/GreaseMonk/android-timetable-core/blob/develop/LICENSE
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.11'
     repositories {
-        mavenCentral()
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-// To avoid manually setting the same values in all Android modules, set the value on the root
-// project and then reference this from the modules
-ext {
-    compileSdkVersion = 26
-    buildToolsVersion = "27.0.0"
-    supportLibVersion = "27.0.0"
-    playServicesVersion = "11.4.2"
-}
-
 allprojects {
     repositories {
-        mavenCentral()
-        jcenter()
-        maven { url "https://jitpack.io" }
         google()
-    }
-
-    task wrapper(type: Wrapper) {
-        gradleVersion = '2.14.1'
+        jcenter()
     }
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
