--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,13 @@
-#Thu Nov 02 15:31:21 CET 2017
+#
+# Copyright (c) 2018 .
+# This file is released under the Apache-2.0 license and part of the TimeTable repository located at:
+# https://github.com/greasemonk/android-timetable-core
+# See the "LICENSE" file at the root of the repository or go to the address below for the full license details.
+# https://github.com/GreaseMonk/android-timetable-core/blob/develop/LICENSE
+#
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
